--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body
 {   
-	font-family: 'PT Sans Narrow' ,sans-serif;
+	font-family:'PT Sans Narrow', Arial, sans-serif;
 	font-weight:bold;
 	text-transform:uppercase;
 	font-size:14px;
